--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -48,23 +48,20 @@
         </ImageView>
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/chart"
-            android:padding="10dp"
+            android:padding="20dp"
             android:id="@+id/but1">
 
             <Button
-                android:layout_width="150dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/but"
                 android:text="start"
                 android:textSize="20sp"
                 />
-
-
-
 
         </RelativeLayout>
 
